Fix text link spacing in footer

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -16,7 +16,11 @@
 }
 
 .text-link {
-  margin: 0 0.5ch;
+  padding: 0.5ch;
+
+  @include breakpoint(medium-desktop-up) {
+    margin: 0 0.5ch 0 -0.5ch;
+  }
 }
 
 .phone {
